--- a/index.html
+++ b/index.html
@@ -1,10 +1,1 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<title>Jahmssen Ruiz Castaneda</title>
-</head>
-<body>
-	<h1>This is a test </h1>
-	<p>I wanna see what it looks like once pushed to github</p>
-</body>
-</html>
+Jahmssen April 24 2021
