--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <header class="header_area">
         <div class="main-menu">
             <nav class="navbar navbar-expand-lg navbar-light navbar-fixed-top">
-                <a class="navbar-brand" href="">Romain Davy</a>
-                <a href="https://github.com/RomDa00" target="_blank"><i class="fab fa-github"></i></a>
+                <a class="navbar-brand" href="">Jahmssen Ruiz</a>
+                <a href="https://github.com/jahmssen" target="_blank"><i class="fab fa-github"></i></a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="navbar-toggler-icon"></span>
                 </button>
