--- a/index.html
+++ b/index.html
@@ -4,40 +4,47 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jahmssen Ruiz</title>
-    <link rel="stylesheet" href="./css/bootstrap.min.css">
-    <link rel="stylesheet" href="./css/style.css">
-    <link rel="stylesheet" href="./css/responsive.css">
-</head>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous"></head>
 <body>
     <header class="header_area">
         <div class="main-menu">
-            <nav class="navbar navbar-expand-lg navbar-light navbar-fixed-top">
-                <a class="navbar-brand" href="">Jahmssen Ruiz</a>
-                <a href="https://github.com/jahmssen" target="_blank"><i class="fab fa-github"></i></a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                  <span class="navbar-toggler-icon"></span>
+            <nav class="navbar navbar-expand-lg navbar-light">                           
+                <a class="navbar-brand" href="#">Jahmssen Ruiz</a>                                                              
+                <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#myNavbar" >
+                  <span class="navbar-toggler-icon"></span>                
                 </button>
-                <div class="collapse navbar-collapse" id="navbarNav">
-                  <div class="mr-auto"></div>
-                  <ul class="navbar-nav">
-                    <li class="nav-item">
-                      <a class="nav-link" href="#Home">Home <span class="sr-only">(current)</span></a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link" href="#About-Me">About Me</a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link" href="#Experience">Experience</a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link" href="#Projects">Projects</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#Contact">Contact</a>
-                      </li>
+                <div class="collapse navbar-collapse" id="myNavbar">
+                  <ul class="navbar-nav navbar-light text-center">                    
+                      <li><a class="nav-link active" data-toggle="dropdown" href="#Home">Home</a></li>                                        
+                      <a class="nav-link" href="#About-Me">About Me</a>                                        
+                      <a class="nav-link" href="#Experience">Experience</a>                                        
+                      <a class="nav-link" href="#Projects">Projects</a>                                        
+                      <a class="nav-link" href="#Contact">Contact</a>                    
                   </ul>
+                </div>
                 </div>
               </nav>
         </div>
+        <main class="site-main">
+          <section class="site-banner">
+            <div class="container"> 
+              <div class="row">
+                <div class="col-lg-1">
+                <h1>One, Two, Dropshot </h1>
+                <h2>Jahmssen</h2>
+                <p>TESTING TEXT </p>
+              </div>
+              </div>
+            </div>
+          </section>
+        </main>
+
     </header>
+    <footer>
+      
+    </footer>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
 </body>
+</html>
