--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
                   <p>I studied Computer Information Systems at DeVry Institute of Technology where I received my Bachelor and graduated Magna Cum Laude with a 3.73 GPA.</p>
 
-                  <p>Here are a few of the technologies I work with:
+                  <p>Here are a few of the technologies I've worked with:
                     <ul>
                       <li>HTML and CSS</li>
                       <li>Javascript</li>
@@ -85,14 +85,24 @@
           <section class="expArea" id="Experience">
             <div class="container"> 
               <div class="row">                
-                <h1>Experience</h1>                
+                <h1>Experience</h1>   
+                <div class="col-xl">
+                  <h2>Morgan Stanley</h2>
+                  <h4>Client Service Manager, Assistant Vice President</h4>
+                  <p>January 2023 - Present</p>
+                  <p>Working cross-departmentally to develop and improve processes to eliminate or mitigate risk.</p>
+                  <p>Assisting clients and colleagues with their financial reporting inquiries.</p>
+                  <p>Providing approval for tasks to be processed by other departments and processing events.</p>
+                  <p>Training and being a source of knowledge for more senior members of the CSM team.</p>
+                  <p>Carrying on the responsibilities of the Associate role.</p>
+                </div>             
                 <div class="col-xl">
                   <h2>Shareworks by Morgan Stanley</h2>
                   <h4>Client Service Manager, Associate</h4>
                   <p>April 2019 - Present</p>
                   <p>Managing a book of business with diverse industries with unique financial and legislative compliance requirements.</p>                  
                   <p>Managing high net worth transactions such as full-valued award releases, stock plan purchases and dividend application.</p>
-                  <p>Working effectively in a highly collaborative cross-functional environment, including interacting with the relationship management, reconciliation, operations, contact centre and development teams on clients' issues.</p>
+                  <p>Working effectively in a highly collaborative cross-functional environment, including interacting with the relationship management, reconciliation, operations, taxes, contact centre and development teams on clients' issues.</p>
                   <p>Developing technical training materials for internal and external stakeholders.</p>
                 </div>
                 <div class="col-xl">
