--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                 <div class="col-xl">
                   <h2>Shareworks by Morgan Stanley</h2>
                   <h4>Client Service Manager, Associate</h4>
-                  <p>April 2019 - Present</p>
+                  <p>April 2019 - January 2023</p>
                   <p>Managing a book of business with diverse industries with unique financial and legislative compliance requirements.</p>                  
                   <p>Managing high net worth transactions such as full-valued award releases, stock plan purchases and dividend application.</p>
                   <p>Working effectively in a highly collaborative cross-functional environment, including interacting with the relationship management, reconciliation, operations, taxes, contact centre and development teams on clients' issues.</p>
